[package]
name = "missedcall-responder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9"

[dev-dependencies]
tokio-test = "0.4"